refactor: Improve sequence comparison and logging in TaskProcessorService